gcc/testsuite/rust/rustc/ui/tuple/wrong_argument_ice-4_dg.rs
fn main() {
    (|| {})(|| {
// { dg-error ".E0057." "" { target *-*-* } .-1 }
        let b = 1;
    });
}

